# erpnext-mcp-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_claude.py
erpnext_mcp_bridge/: bridge.py
src/erpnext_mcp_bridge/: __init__.py  bridge.py
