[project]
name = "erpnext-mcp-bridge"
version = "1.0.0"
description = "MCP stdio bridge connecting Claude Desktop to Frappe Assistant Core on ERPNext"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vanya Smythe", email = "vanya@ethospower.org"}
]
keywords = ["mcp", "erpnext", "frappe", "claude", "ai", "erp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "requests>=2.28.0"
]

[project.scripts]
erpnext-mcp-bridge = "erpnext_mcp_bridge.bridge:main"

[project.urls]
Homepage = "https://github.com/No-Smoke/erpnext-mcp-bridge"
Repository = "https://github.com/No-Smoke/erpnext-mcp-bridge"
Issues = "https://github.com/No-Smoke/erpnext-mcp-bridge/issues"

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core:buildapi"
